// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DpNotification always renders with closemark 1`] = `
"<div class="c-notify__message c-notify__message--error" role="alert"><button class="c-notify__closer" type="button" aria-label="Hinweis ausblenden">
    <!---->
  </button>
  <div class="flow-root">
    <!---->
    <div class="c-notify__text u-ml mt-2">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`DpNotification always renders with closemark 2`] = `
"<div class="c-notify__message c-notify__message--confirm" role="status"><button class="c-notify__closer" type="button" aria-label="Hinweis ausblenden">
    <!---->
  </button>
  <div class="flow-root">
    <!---->
    <div class="c-notify__text u-ml mt-2">
      <!--v-if-->
    </div>
  </div>
</div>"
`;
